# YP_notifications_sprint_1

./: .gitignore  .mypy.ini  Makefile  README.md  docker-compose.tests.yaml  docker-compose.yaml
.github/workflows/: checks.yml  linters.yml  tests.yml  workflow.yml
auth_service/: docker-entrypoint.sh
auth_service/src/models/: role.py  (+2 more)
nginx/: nginx.conf
nginx/configs/: auth-service.conf  notifications-admin-panel.conf  notifications-api.conf
notifications_admin_panel/: Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml
notifications_admin_panel/public/: index.html
notifications_api/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
notifications_api/nginx_tests/configs/: notifications-service.conf
notifications_api/src/: main.py
notifications_api/src/api/v1/: notifications.py  templates.py
notifications_api/src/core/: config.py  messages.py
notifications_api/src/db/: postgres.py
notifications_api/src/db/migrations/: env.py
notifications_api/src/db/migrations/versions/: 2024_03_28_0104-ead67b118e1a_initial_migration.py  2024_03_28_2127-d3d268dbd0af_initial_migration.py  2024_03_31_1105-54f54a01d852_initial_migration.py
notifications_api/src/models/: notification.py  template.py
notifications_api/src/queries/: template.py
notifications_api/src/schemas/: notification.py  template.py
notifications_api/src/services/: notification.py  rabbitmq.py  template.py
notifications_api/src/services/data_repository/: postgres.py
notifications_api/src/templates/new_episode/: new_episode.html
notifications_api/src/templates/new_items/: new_items.html
notifications_api/src/templates/welcome/: welcome.html
notifications_api/tests/functional/: settings.py
notifications_api/tests/functional/fixtures/: client.py  common.py
notifications_api/tests/functional/src/: test_notifications.py  test_templates.py
url_shorter/: .dockerignore  .env.example  Dockerfile  README.md  config.py  init.sh  pyproject.toml
url_shorter/core/: __init__.py  models.py  routes.py
url_shorter/migrations/versions/: ef3797b6294e_.py
worker/: .env.example  Dockerfile  base.py  config.py  pyproject.toml  requirements.txt  worker.py
(+28 files in other folders)
