[tool.poetry]
name = "notification-api"
version = "0.1.0"
description = ""
authors = ["Dmitry Murzin <dima@murzin.life>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
orjson = "^3.10.0"
typer = "^0.9.0"
asyncpg = "^0.29.0"
backoff = "^2.2.1"
wait-for-it = "^2.2.2"
aiohttp = "^3.9.1"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-jaeger = "^1.21.0"
pyjwt = "2.8.0"
jinja2 = "^3.1.3"
aio-pika = "^9.4.1"

[tool.poetry.dev-dependencies]
isort = "^5.13.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
