[tool.poetry]
name = "broker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
pydantic-settings = "^2.2.1"
aio-pika = "^9.4.1"
aiohttp = "^3.9.3"
asyncpg = "^0.29.0"
aiosmtplib = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
